--- a/DevX-Project/src/App.css
+++ b/DevX-Project/src/App.css
@@ -1,42 +1,53 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.App {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.App-navbar-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4rem;
+  background-color: white;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  box-shadow: 0 2px 8px #54331028;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  img {
+    height: 2rem;
+    padding-right: 0.5rem;
   }
-  to {
-    transform: rotate(360deg);
+  a {
+    color: #543310;
+  }
+  .App-navbar-title {
+    font-weight: bold;
+    font-size: 2em;
+    padding: 0.25rem 2rem;
+  }
+  .App-navbar-link-container {
+    display: flex;
+    gap: 1.25rem;
+    padding-right: 1rem;
+  }
+  .navbarLink {
+    height: 2rem;
+    line-height: 2rem;
+    font-size: 1.15em;
+    font-weight: bold;
+    &:hover {
+      color: #af8f6f;
+    }
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.App-content-container {
+  padding-top: 4rem;
 }
