--- a/DevX-Project/src/App.css
+++ b/DevX-Project/src/App.css
@@ -25,7 +25,7 @@
     padding-right: 0.5rem;
   }
   a {
-    color: #543310;
+    color: #3b240b;
   }
   .App-navbar-title {
     font-weight: bold;
@@ -49,5 +49,4 @@
 }
 
 .App-content-container {
-  padding-top: 4rem;
 }
