--- a/DevX-Project/src/components/Profile.css
+++ b/DevX-Project/src/components/Profile.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   gap: 4rem;
+  padding-top: 4rem;
 }
 .Profile-left-container {
   display: flex;
