--- a/DevX-Project/src/components/Auth.css
+++ b/DevX-Project/src/components/Auth.css
@@ -44,6 +44,7 @@
 .Auth-buttons-container {
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 1rem;
 }
 .Auth-button {
@@ -61,6 +62,9 @@
     cursor: pointer;
   }
 }
+.App-auth-logo {
+  height: 1rem;
+}
 
 /* AUTH FORMS */
 .Auth-form-container {
@@ -76,6 +80,7 @@
   padding: 2rem 4rem;
 }
 .Auth-form-header {
+  color: #3b240b;
   margin-top: 0;
 }
 .Auth-form {
@@ -83,14 +88,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.25rem;
 }
 .Auth-input {
-  width: 15rem;
+  width: 18rem;
   height: 1.5rem;
   background-color: white;
   border: 1px #af8f6f solid;
   border-radius: 1rem;
+  margin-top: 0.25rem;
   padding: 0.5rem 0.5rem;
   transition: 0.1s ease-in-out;
   &:focus {
@@ -99,8 +105,36 @@
     border-color: #3b240b;
   }
 }
+.Auth-form-names-container {
+  display: flex;
+  flex-direction: row;
+  gap: 0.25rem;
+  margin-top: 0.25rem;
+  .Auth-input-name,
+  .Auth-input-age {
+    height: 1.5rem;
+    background-color: white;
+    border: 1px #af8f6f solid;
+    border-radius: 1rem;
+    padding: 0.5rem 0.5rem;
+    transition: 0.1s ease-in-out;
+    &:focus {
+      outline: none;
+      box-shadow: none;
+      border-color: #3b240b;
+    }
+  }
+  .Auth-input-name {
+    width: 7rem;
+  }
+  .Auth-input-age {
+    width: 1.5rem;
+  }
+}
+
 .Auth-back-button,
 .Auth-forgotPassword-button {
+  font-size: 0.8em;
   background-color: transparent;
   color: #3b240b;
   border: none;
@@ -113,25 +147,5 @@
 
 .Auth-form-error {
   color: red;
-}
-.Auth-social-container {
-  border-top: 1px #af8f6f solid;
-  border-bottom: 1px #af8f6f solid;
-  width: 15rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  padding-top: 0.5rem;
-  padding-bottom: 1rem;
-}
-.Auth-social-header {
-  font-size: 0.95em;
-  font-weight: bold;
-  color: #3b240b;
-}
-.Auth-social-img {
-  height: 3rem;
-  margin-top: 1rem;
-  &:hover {
-    cursor: pointer;
-  }
+  font-size: 0.8em;
 }
