--- a/DevX-Project/src/components/Chats.css
+++ b/DevX-Project/src/components/Chats.css
@@ -44,6 +44,8 @@
   /* border-radius: 0.25rem; */
   border-top: 1px solid #af8f6f;
   border-bottom: 1px solid #af8f6f;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
 
   background-color: #f8f4e1;
   text-align: center;
