--- a/DevX-Project/src/App.css
+++ b/DevX-Project/src/App.css
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  /*   background-image: url("./img/coffeeDate1.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; */
 }
 
 .App-navbar-container {
@@ -50,4 +54,7 @@
 }
 
 .App-content-container {
+  width: 100vw;
+  height: 100%;
+  padding-top: 4.5rem;
 }
