--- a/DevX-Project/src/components/Auth.css
+++ b/DevX-Project/src/components/Auth.css
@@ -1,14 +1,25 @@
 .Auth {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* background-image: url("../img/coffeeDate1.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; */
+}
+
+.Auth-background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
   background-image: url("../img/coffeeDate1.jpg");
-  background-size: cover; /* Scale the image to cover the div */
-  background-position: center; /* Center the image */
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
+  z-index: -100;
 }
 
 .Auth-intro-container {
@@ -150,7 +161,6 @@
   width: 90%;
   color: red;
   font-size: 0.8em;
-  /* text-align: left; */
 }
 
 .Auth-form-break {
