--- a/DevX-Project/src/components/Chats.css
+++ b/DevX-Project/src/components/Chats.css
@@ -5,7 +5,7 @@
   color: #3b240b;
   padding-left: 2rem;
   padding-right: 2rem;
-  overflow: auto;
+  overflow: visible;
 }
 /* body{
   overflow: scroll;
@@ -168,15 +168,19 @@
 
 .APIModal-container {
   position: relative;
-  bottom: 0;
-  left: 0;
+  display:flex;
+  justify-content: center;
+  align-items:center;
+  /* bottom: 0;
+  left: 0; */
   width: 100%;
-  height: 20vh; /* Adjust to fit your design (20% viewport height) */
+  height: fit-content; /* Adjust to fit your design (20% viewport height) */
   background-color: #fff;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000; /* Ensures it's above other content */
   padding: 1rem;
-  overflow-y: auto;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 
